<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:touchscreenBlocksFocus="false"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtDoc"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:breakStrategy="simple"
                android:bufferType="normal"
                android:ems="10"
                android:hint="@string/documento"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre_y_apellido"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="Minimo 6 caracteres" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCelular"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtConPass"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/confirmar_contrase_a"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="#1976D2"
            android:text="@string/registrarse" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>